--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
-    	<h1>Официальный сайт Posral Optimistaion</h1>
+    	<h1>Официальный сайт Posral Optimisation</h1>
 		<b>Описание:</b>
 		<br>
 		Posral Optimisation - это мега универсальный инструмент для оптимизации вашего ПК. Эта программа позовляет вам МАКСИМАЛЬНО оптимизировать ваш ПК для того, чтобы обеспечить большую производительность вашего ПК в играх и всяких других программах требующих от компьютера дохрена всякого.
@@ -50,7 +50,7 @@
 		<br>
 		<b>Загрузки:</b>
 		<br>
-		<a href="PosralOptimisation.exe" download><button>Скачать Demo</button></a>
+		<a href="PosralLauncher.exe" download><button>Скачать Demo</button></a>
 		<br>
 		<b>Покупки:</b>
 		<br>
